--- a/src/app/Modules/aboutus/aboutus.component.html
+++ b/src/app/Modules/aboutus/aboutus.component.html
@@ -1,7 +1,7 @@
-<div class="wrapper">
-    <div class="container">
-        <div class="container__line"></div>
-        <div class="container__path flex justify-content-start">
+<div class="wrapper-aboutus">
+    <div class="container-aboutus">
+        <div class="container-aboutus__line"></div>
+        <div class="container-aboutus__path flex justify-content-start">
             <div class="container__home">
                 <a class="container__link" routerLink="/">Home</a>
             </div>
@@ -10,14 +10,16 @@
             </div>
             <div class="container__aboutus">About us</div>
         </div>
-        <div class="container__titl">About us</div>
-        <div class="container__img1">
+        <div class="container-aboutus__title">About us</div>
+        <div class="container-aboutus__img1">
             <img class="image-flowers" src="../../../assets/img-aboutus/image 255.jpg" alt="flowers">
         </div>
-        <p class="container__text1">For several years now, our company has been delighting customers with the delivery
+        <p class="container-aboutus__text-under-image">For several years now, our company has been delighting customers
+            with the
+            delivery
             of flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees
             and are always confident that your order will be delivered at the right time to the right place.</p>
-        <div class="container__flowers">
+        <div class="container-aboutus__flowers">
             <div class="container__picture"><img class="image-flower" src="../../../assets/img-aboutus/image 3.1png.png"
                     alt="flower1"></div>
             <div class="container__picture"><img class="image-flower" src="../../../assets/img-aboutus/image 4.1.png"
@@ -25,17 +27,21 @@
             <div class="container__picture"><img class="image-flower" src="../../../assets/img-aboutus/image 5.1.png"
                     alt="flower3"></div>
         </div>
-        <p class="container__figcapture">Examples of our work</p>
-        <p class="container__text2">We always know where your order is located, at any time it can be tracked thanks to
+        <p class="container-aboutus__figcapture">Examples of our work</p>
+        <p class="container-aboutus__text-description-first">We always know where your order is located, at any time it
+            can be
+            tracked thanks to
             the means of mobile communication and navigation that each of our couriers has, regardless of whether he
             moves on foot or using one of the types of his own transport. </p>
-        <p class="container__text3">We are pleased with the constant influx of new customers, and we value each of them.
+        <p class="container-aboutus__text-description-second">We are pleased with the constant influx of new customers,
+            and we
+            value each of them.
             And our reputation is growing every day thanks to constant feedback from grateful customers who have used
             our services.</p>
-        <div class="container__img2">
+        <div class="container-aboutus__img2">
             <img class="image-flowers" src="../../../assets/img-aboutus/image 256.jpg" alt="flowers">
         </div>
-        <div class="container__advantages" id="advantages">
+        <div class="container-aboutus__advantages" id="advantages">
             <div class="container__title2">
                 Our advantages
             </div>
