--- a/src/app/Modules/home/home.component.html
+++ b/src/app/Modules/home/home.component.html
@@ -1,16 +1,16 @@
-<div class="wrapper">
-    <div class="container">
+<div class="wrapper-home">
+    <div class="container-home">
         <app-home-swiper-logo></app-home-swiper-logo>
         <app-banners></app-banners>
         <app-home-swiper-list></app-home-swiper-list>
-        <div class="container__beauties">
+        <div class="container-home__beauties">
             Look at the these beauties!
         </div>
         <app-home-items></app-home-items>
-        <button class="container__button">
+        <button class="container-home__button">
             <p class="container__parag">Browse catalog</p>
         </button>
-        <div class="container__information">
+        <div class="container-home__information">
             <h2 class="color">
                 Flower delivery in Minsk
             </h2>
