--- a/src/app/Modules/news/newsarticle/newsarticle.component.html
+++ b/src/app/Modules/news/newsarticle/newsarticle.component.html
@@ -1,7 +1,7 @@
-<div class="wrapper">
-    <div class="container">
-        <div class="container__line"></div>
-        <div class="container__path flex justify-content-start">
+<div class="wrapper-newsarticle">
+    <div class="container-newsarticle">
+        <div class="container-newsarticle__line"></div>
+        <div class="container-newsarticle__path flex justify-content-start">
             <div class="container__home">
                 <a class="container__link" routerLink="/">Home</a>
             </div>
@@ -17,30 +17,34 @@
             <div class="container__news">New delivery method</div>
             <div class="container__new">New delivery meth...</div>
         </div>
-        <div class="container__titl">New delivery method</div>
-        <p class="container__text">For several years now, our company has been delighting customers with the delivery of
+        <div class="container-newsarticle__title">New delivery method</div>
+        <p class="container-newsarticle__text">For several years now, our company has been delighting customers with the
+            delivery of
             flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees and
             are always confident that your order will be delivered at the right time to the right place.</p>
-        <div class="container__img1">
+        <div class="container-newsarticle__img-delivery">
             <img id="imgDelivery" src="../../../../assets/img-news/image 258.jpg" alt="delivery">
         </div>
-        <p class="container__text1">Flowers can and should be given not only for holidays, but also for no reason. And
+        <p class="container-newsarticle__description-first">Flowers can and should be given not only for holidays, but
+            also for no reason. And
             flowers with delivery are convenient, fast and reliable. In our online store, you can order stunning
             bouquets for your home or office, which can not fail to impress. We will deliver them to any convenient
             point in Minsk. If desired, the bouquet is supplemented with a postcard, the text of which is chosen by the
             client.
         </p>
-        <p class="container__text1">Flower delivery Minsk is a service that is very popular in the Republic of Belarus.
+        <p class="container-newsarticle__description-first">Flower delivery Minsk is a service that is very popular in
+            the Republic of Belarus.
             You can order a ready-made composition or a thematic bouquet for a birthday, name day, wedding, anniversary,
             congratulations and other occasions. Roses (peony, bush), tulips, daisies, lilies, orchids, chrysanthemums,
             gerberas, alstroemeria, irises, peonies, eustomas, carnations are only a part of those flowers that are used
             for making bouquets. Forget about visiting a florist. We will make a bouquet for you that meets your wishes
             and requirements, and we will deliver it for free in Minsk and the Minsk district: Central, Sovetsky,
             Pervomaysky, Partizansky, Zavodsky, Leninsky, Oktyabrsky, Moskovsky, Frunzensky.</p>
-        <div class="container__img3">
+        <div class="container-newsarticle__img-woman">
             <img id="imgWoman" src="../../../../assets/img-news/image 259.jpg" alt="women">
         </div>
-        <p class="container__text">For several years now, our company has been delighting customers with the delivery of
+        <p class="container-newsarticle__text">For several years now, our company has been delighting customers with the
+            delivery of
             flowers and congratulations. We are really proud of the clear and well-coordinated work of our employees and
             are always confident that your order will be delivered at the right time to the right place.</p>
         <app-banners></app-banners>
