--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper-footer">
     <footer class="footer">
         <div class="footer__flex">
             <div class="footer__logo"><img id="logo-image" src="../assets/img-home/FlowerShop.png" alt="logo"></div>
