--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
 @import "../styles/_variables.scss";
 @import "../styles/_mixins.scss";
 
-.wrapper {
+.wrapper-footer {
     max-width: 1440px;
     margin: 7rem auto 0;
 }
